--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,9 +1,14 @@
 .header {
   font-size: 1.6rem;
+  height: 6rem;
   color: $color-grey-dark-1;
   height: 6rem;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  &__logo {
+    margin-left: 0.5rem;
+  }
 }
