--- a/css/style.css
+++ b/css/style.css
@@ -3,28 +3,26 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
-}
+  box-sizing: inherit; }
 
 html {
-  font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
-  line-height: 1.5;
-}
+  line-height: 1.5; }
 
 .header {
   font-size: 1.6rem;
+  height: 6rem;
   color: #959595;
   height: 6rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
+  .header__logo {
+    margin-left: 0.5rem; }
