--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,45 @@
 *,
 *::after,
 *::before {
-	margin: 0;
-	padding: 0;
-	box-sizing: inherit;
-}
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
 
 html {
-	font-size: 62.5%;
-}
+  font-size: 62.5%; }
 
 body {
-	box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
-	font-family: "Noto Sans KR", sans-serif;
-	font-weight: 400;
-	line-height: 1.5;
-}
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 400;
+  line-height: 1.5; }
+
+.search {
+  flex: 0 0 45%; }
+  .search__input {
+    font-family: inherit;
+    color: inherit; }
+    .search__input:focus {
+      outline: none; }
+  .search__btn {
+    border: none; }
+    .search__btn :focus {
+      outline: none; }
+  .search__icon {
+    height: 2rem;
+    width: 2rem; }
 
 .header {
-	font-size: 1.6rem;
-	color: #959595;
-	height: 6rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
+  font-size: 1.6rem;
+  color: #959595;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .header__logo {
+    width: 18rem;
+    height: 7rem; }
+  .header-menu__icon {
+    width: 2rem;
+    height: 2rem; }
