--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,8 @@
 @import "base/typography";
 @import "base/utilities";
 
+@import "components/search";
+
 @import "layout/header";
 @import "layout/nav";
 
