--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,38 +1,34 @@
 .header {
-<<<<<<< HEAD
-  font-size: 1.6rem;
-  height: 6rem;
-  color: $color-grey-dark-1;
-  height: 6rem;
+  margin: 3.4rem;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   &__logo {
-    margin-left: 0.5rem;
+    width: 18rem;
+    height: 7rem;
   }
-=======
-	font-size: 1.6rem;
-	color: $color-grey-dark-1;
 
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  .search {
+    margin-right: auto;
+  }
 
-	&__logo {
-		width: 18rem;
-		height: 7rem;
-	}
+  .user-nav {
+    text-decoration: none;
+    &__menu {
+      list-style: none;
+      &__item {
+        text-transform: uppercase;
+      }
+    }
+  }
 
-	.user-nav {
-	}
-
-	&-menu {
-		&__icon {
-			width: 2rem;
-			height: 2rem;
-		}
-	}
->>>>>>> 6a3a96a5e7206dce0309ce53fda635bc1ea3852d
+  &-menu {
+    &__icon {
+      width: 7rem;
+      height: 7rem;
+      fill: $color-blue-light-2;
+    }
+  }
 }
