--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -11,3 +11,13 @@ $color-grey-light-2: #c4c4c4;
 $color-grey-dark-1: #959595;
 
 $color-orange: #ec652b;
+
+// FONT
+$font-large-1: 4rem;
+$font-large-2: 3.6rem;
+$font-large-3: 3.2rem;
+$font-medium-1: 2.6rem;
+$font-medium-2: 2.2rem;
+$font-default: 1.6rem;
+$font-small-1: 1.4rem;
+$font-small-2: 1.2rem;
