--- a/css/style.css
+++ b/css/style.css
@@ -15,35 +15,40 @@ body {
 body {
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
-  line-height: 1.5; }
+  line-height: 1.5;
+  letter-spacing: 1px; }
 
-.search__input {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  border: 1px solid #c4c4c4;
-  border-radius: 5px;
-  width: 48.6rem;
-  height: 5rem;
-  margin: 2rem 0; }
-  .search__input:focus {
-    outline: none;
-    background-color: #fff; }
-  .search__input::placeholder {
-    font-weight: 300;
-    font-size: 2.2rem;
-    color: #959595;
-    padding: 1rem 0.7rem; }
-
-.search__btn {
-  border: none; }
-  .search__btn:focus {
-    outline: none; }
-
-.search__icon {
-  height: 4rem;
-  width: 4rem;
-  fill: #2196f3; }
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .search__input {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    border: 1px solid #c4c4c4;
+    border-radius: 5px;
+    width: 48.6rem;
+    height: 5rem;
+    margin: 2rem 0; }
+    .search__input:focus {
+      outline: none;
+      background-color: #fff; }
+    .search__input::placeholder {
+      font-weight: 300;
+      font-size: 2.2rem;
+      color: #959595;
+      padding: 1rem 0.7rem; }
+  .search__btn {
+    border: none;
+    background: none;
+    margin-left: -4.5rem; }
+    .search__btn:focus {
+      outline: none; }
+  .search__icon {
+    height: 3rem;
+    width: 3rem;
+    fill: #2196f3; }
 
 .header {
   margin: 3.4rem;
@@ -56,14 +61,37 @@ body {
   .header .search {
     margin-right: auto; }
   .header .user-nav {
-    text-decoration: none; }
+    width: 18rem;
+    height: 5rem;
+    position: relative;
+    font-weight: 500;
+    text-align: center; }
     .header .user-nav__menu {
       list-style: none; }
-      .header .user-nav__menu__item {
-        text-transform: uppercase; }
-  .header-menu__icon {
-    width: 7rem;
+    .header .user-nav__item {
+      width: 18rem;
+      height: 5rem;
+      position: absolute;
+      visibility: hidden; }
+    .header .user-nav__link:link, .header .user-nav__link:visited {
+      font-size: 2.6rem;
+      color: #000;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 3px;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%); }
+  .header-menu__btn {
+    width: 7.8rem;
     height: 7rem;
+    border: none;
+    background: none; }
+  .header-menu__icon {
+    width: 100%;
+    height: 100%;
     fill: #2196f3; }
 
 .container {
