--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -15,19 +15,49 @@
   }
 
   .user-nav {
-    text-decoration: none;
+    width: 18rem;
+    height: 5rem;
+    position: relative;
+    font-weight: 500;
+    text-align: center;
+
     &__menu {
       list-style: none;
-      &__item {
-        text-transform: uppercase;
-      }
+    }
+
+    &__item {
+      width: 18rem;
+      height: 5rem;
+      position: absolute;
+      visibility: hidden;
+    }
+
+    &__link:link,
+    &__link:visited {
+      font-size: $font-medium-1;
+      color: #000;
+      text-transform: uppercase;
+      text-decoration: none;
+      letter-spacing: 3px;
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
   &-menu {
-    &__icon {
-      width: 7rem;
+    &__btn {
+      width: 7.8rem;
       height: 7rem;
+      border: none;
+      background: none;
+    }
+
+    &__icon {
+      width: 100%;
+      height: 100%;
       fill: $color-blue-light-2;
     }
   }
