Add: hero section (in progress)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,8 +7,10 @@
 @import "base/utilities";
 
 @import "components/search";
+@import "components/btn";
 
 @import "layout/header";
+@import "layout/hero";
 @import "layout/nav";
 
 @import "pages/home";
