--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
   line-height: 1.5;
   letter-spacing: 1px; }
 
+.heading-primary {
+  font-size: 4rem;
+  margin-bottom: 3rem; }
+
 .search {
   display: flex;
   justify-content: center;
@@ -50,11 +54,35 @@ body {
     width: 3rem;
     fill: #2196f3; }
 
+.btn:link, .btn:visited {
+  width: 20rem;
+  height: 5rem;
+  background-color: #0069c0;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  margin-top: 3rem;
+  transition: all 0.2s; }
+
+.btn:hover {
+  transform: scale(1.1); }
+
+.btn__subscribe {
+  font-size: 2.2rem;
+  font-weight: 500;
+  text-decoration: none; }
+
 .header {
   margin: 3.4rem;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  position: fixed; }
   .header__logo {
     width: 18rem;
     height: 7rem; }
@@ -94,19 +122,25 @@ body {
     height: 100%;
     fill: #2196f3; }
 
-.container {
-  max-width: 120rem;
-  height: 100%;
-  margin: 0 auto; }
+.hero {
+  display: flex;
+  justify-content: space-around; }
+  .hero__text {
+    margin: 3rem;
+    padding: 2rem; }
+    .hero__text .paragraph {
+      font-size: 2.2rem; }
 
 .header {
+  width: 100vw;
   height: 7rem;
   font-size: 1.6rem;
   color: #959595; }
 
 .hero {
-  background-color: red;
-  height: 40rem; }
+  width: 120rem;
+  min-height: 40rem;
+  margin: 7rem auto; }
 
 .section-slider {
   background-color: orange;
