--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,6 +5,8 @@
   justify-content: space-between;
   align-items: center;
 
+  position: fixed;
+
   &__logo {
     width: 18rem;
     height: 7rem;
