--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,18 +1,14 @@
-.container {
-  max-width: 120rem;
-  height: 100%;
-  margin: 0 auto;
-}
-
 .header {
+  width: 100vw;
   height: 7rem;
   font-size: 1.6rem;
   color: $color-grey-dark-1;
 }
 
 .hero {
-  background-color: red;
-  height: 40rem;
+  width: 120rem;
+  min-height: 40rem;
+  margin: 7rem auto;
 }
 
 .section-slider {
