--- a/css/style.css
+++ b/css/style.css
@@ -55,34 +55,30 @@ body {
     fill: #2196f3; }
 
 .btn:link, .btn:visited {
-  width: 20rem;
-  height: 5rem;
+  font-size: 2.2rem;
+  font-weight: 500;
   background-color: #0069c0;
   color: #fff;
   border: none;
   border-radius: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 1.5rem 2rem;
   display: inline-block;
-  margin-top: 3rem;
+  backface-visibility: hidden;
   transition: all 0.2s; }
 
 .btn:hover {
   transform: scale(1.1); }
 
 .btn__subscribe {
-  font-size: 2.2rem;
-  font-weight: 500;
-  text-decoration: none; }
+  text-decoration: none;
+  margin-top: 3rem; }
 
 .header {
-  margin: 3.4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed; }
+  position: fixed;
+  top: 0; }
   .header__logo {
     width: 18rem;
     height: 7rem; }
@@ -124,7 +120,7 @@ body {
 
 .hero {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-between; }
   .hero__text {
     margin: 3rem;
     padding: 2rem; }
@@ -132,7 +128,7 @@ body {
       font-size: 2.2rem; }
 
 .header {
-  width: 100vw;
+  width: 120rem;
   height: 7rem;
   font-size: 1.6rem;
   color: #959595; }
@@ -140,7 +136,14 @@ body {
 .hero {
   width: 120rem;
   min-height: 40rem;
-  margin: 7rem auto; }
+  margin: 7rem auto 0 auto; }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+  .main > * {
+    width: 120rem; }
 
 .section-slider {
   background-color: orange;
