--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,18 +1,15 @@
 .btn {
   &:link,
   &:visited {
-    width: 20rem;
-    height: 5rem;
+    font-size: $font-medium-2;
+    font-weight: 500;
     background-color: $color-blue-dark-1;
     color: #fff;
     border: none;
     border-radius: 5px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    padding: 1.5rem 2rem;
     display: inline-block;
-    margin-top: 3rem;
+    backface-visibility: hidden;
     transition: all 0.2s;
   }
 
@@ -21,8 +18,7 @@
   }
 
   &__subscribe {
-    font-size: $font-medium-2;
-    font-weight: 500;
     text-decoration: none;
+    margin-top: 3rem;
   }
 }
