--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/search";
 @import "components/btn";
+@import "components/content";
 
 @import "layout/header";
 @import "layout/hero";
