--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -9,3 +9,8 @@ body {
   font-size: $font-large-1;
   margin-bottom: 3rem;
 }
+
+.heading-secondary {
+  font-size: $font-large-2;
+  margin: 4.8rem 0 3.2rem 0;
+}
