Add: category section

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 @import "components/search";
 @import "components/btn";
 @import "components/content";
+@import "components/category";
 
 @import "layout/header";
 @import "layout/hero";
