--- a/css/style.css
+++ b/css/style.css
@@ -18,13 +18,16 @@ body {
   line-height: 1.5;
   letter-spacing: 1px; }
 
-.heading-primary {
+.heading-1 {
   font-size: 4rem;
   margin-bottom: 3rem; }
 
-.heading-secondary {
+.heading-2 {
   font-size: 3.6rem;
   margin: 4.8rem 0 3.2rem 0; }
+
+.heading-3 {
+  font-size: 2.6rem; }
 
 .search {
   display: flex;
@@ -104,7 +107,6 @@ body {
       width: 3rem;
       height: 3rem; }
   .home-contents .contents-box .contents-title {
-    height: 6rem;
     font-size: 2.6rem;
     font-weight: 700;
     line-height: 1.3;
@@ -113,6 +115,22 @@ body {
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis; }
+
+.category__box {
+  margin: 0 2rem;
+  position: relative; }
+  .category__box__img {
+    width: 18rem;
+    height: 18rem;
+    filter: brightness(0.7); }
+  .category__box__name {
+    font-size: 2.2rem;
+    font-weight: 500;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
 
 .header {
   display: flex;
@@ -193,8 +211,10 @@ body {
   height: 177.4rem; }
 
 .section-category {
-  background-color: yellowgreen;
-  height: 30.8rem; }
+  height: 30.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 .section-hot {
   background-color: green;
