--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -5,12 +5,16 @@ body {
   letter-spacing: 1px;
 }
 
-.heading-primary {
+.heading-1 {
   font-size: $font-large-1;
   margin-bottom: 3rem;
 }
 
-.heading-secondary {
+.heading-2 {
   font-size: $font-large-2;
   margin: 4.8rem 0 3.2rem 0;
+}
+
+.heading-3 {
+  font-size: $font-medium-1;
 }
