--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/btn";
 @import "components/content";
 @import "components/category";
+@import "components/banner";
 
 @import "layout/header";
 @import "layout/hero";
