--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ body {
 .btn:link, .btn:visited {
   font-size: 2.2rem;
   font-weight: 500;
+  text-decoration: none;
   background-color: #0069c0;
   color: #fff;
   border: none;
@@ -77,8 +78,12 @@ body {
   transform: scale(1.1); }
 
 .btn__subscribe {
-  text-decoration: none;
   margin-top: 3rem; }
+
+.btn__about {
+  margin-left: 10rem; }
+  .btn__about span {
+    margin-left: 1rem; }
 
 .btn-icon {
   fill: #c4c4c4; }
@@ -131,6 +136,36 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
+
+.banner {
+  width: 120rem;
+  height: 30rem;
+  margin: 6.4rem auto; }
+
+.banner__event {
+  background-image: url(/resources/img/banner-event.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .banner__event__description {
+    display: inline-block;
+    font-weight: 700;
+    margin-left: 20rem; }
+    .banner__event__description--name {
+      font-size: 2.2rem;
+      margin-top: 3.2rem; }
+    .banner__event__description--title {
+      font-size: 3.6rem;
+      margin: 2.6rem 0; }
+    .banner__event__description--duration, .banner__event__description--participants {
+      font-size: 1.6rem; }
+
+.banner__about {
+  background-image: url(/resources/img/banner-about.png);
+  background-repeat: no-repeat;
+  background-size: cover; }
+  .banner__about__title {
+    display: inline-block;
+    margin: 5rem 40rem 2.6rem 10rem; }
 
 .header {
   display: flex;
@@ -221,7 +256,6 @@ body {
   height: 177.4rem; }
 
 .section-event {
-  background-color: skyblue;
   height: 42.8rem; }
 
 .section-favor {
@@ -229,7 +263,6 @@ body {
   height: 177.4rem; }
 
 .section-about {
-  background-color: hotpink;
   height: 41.8rem; }
 
 .footer {
