--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,12 +8,13 @@
 
 @import "components/search";
 @import "components/btn";
-@import "components/content";
+@import "components/contents";
 @import "components/category";
 @import "components/banner";
 
 @import "layout/header";
 @import "layout/hero";
 @import "layout/nav";
+@import "layout/footer";
 
 @import "pages/home";
