--- a/sass/components/_contents.scss
+++ b/sass/components/_contents.scss
@@ -1,49 +1,50 @@
-.home-contents {
-  .contents-box {
+.contents-box {
+  width: 28.2rem;
+
+  &__thumbnail {
     width: 28.2rem;
-    height: 38.9rem;
+    height: 28.2rem;
+    margin-bottom: 2.2rem;
+    border-radius: 5px;
+  }
 
-    &__thumbnail {
-      width: 28.2rem;
-      height: 28.2rem;
-      margin-bottom: 2.2rem;
-      border-radius: 5px;
-    }
-
-    &__description {
+  &__description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+    .hashtags {
+      list-style: none;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-bottom: 1rem;
-      .hashtags {
-        list-style: none;
-        display: flex;
-        margin-right: auto;
+      margin-right: auto;
 
-        &__item {
-          font-size: $font-small-1;
-          margin-right: 0.7rem;
-        }
-      }
-
-      .btn-icon {
-        &__like,
-        &__bookmark {
-          width: 3rem;
-          height: 3rem;
-        }
+      &__item {
+        font-size: $font-small-1;
+        margin-right: 0.7rem;
       }
     }
 
-    .contents-title {
-      font-size: $font-medium-1;
-      font-weight: 700;
-      line-height: 1.3;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    .btn-icon {
+      &__like,
+      &__bookmark {
+        width: 3rem;
+        height: 3rem;
+      }
+
+      &:not(:last-child) {
+        margin-right: 0.3rem;
+      }
     }
+  }
+
+  .contents-title {
+    font-size: $font-medium-1;
+    font-weight: 700;
+    line-height: 1.3;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 }
