--- a/resources/slick/slick.css
+++ b/resources/slick/slick.css
@@ -85,7 +85,7 @@
   pointer-events: none;
 }
 .slick-initialized .slick-slide {
-  display: block;
+  display: flex;
 }
 .slick-loading .slick-slide {
   visibility: hidden;
