--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,30 +1,36 @@
 .main-slider {
   width: 120rem;
+  margin: 0 auto;
 
   .slide {
+    padding: 2rem;
     display: flex;
-    justify-content: center;
 
     &__description {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      margin-left: 4.4rem;
+
       &__name {
         font-size: $font-medium-1;
         font-weight: 500;
       }
 
       &__title {
-        margin: 2.5rem;
+        margin: 2.5rem 0;
       }
 
-      &__hashtags {
+      &__hashtags--list {
+        list-style: none;
+
         display: flex;
+      }
 
-        &--list {
-          list-style: none;
-        }
-
-        &--item {
-          font-size: $font-default;
-        }
+      &__hashtags--item {
+        font-size: $font-default;
+        flex: 0 0 15%;
       }
     }
   }
