--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/contents";
 @import "components/category";
 @import "components/banner";
+@import "components/slider";
 
 @import "layout/header";
 @import "layout/hero";
