--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,10 +1,12 @@
-.main-slider {
+.slider {
   width: 120rem;
   margin: 0 auto;
-
   .slide {
+    width: 120rem;
     padding: 2rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
 
     &__description {
       display: flex;
