--- a/sass/components/_category.scss
+++ b/sass/components/_category.scss
@@ -1,20 +1,28 @@
-.category__box {
-  margin: 0 2rem;
-  position: relative;
+.category {
+  width: 120rem;
+  margin: 6.4rem 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  &__img {
-    width: 18rem;
-    height: 18rem;
-    filter: brightness(0.7);
-  }
+  &__box {
+    margin: 0 2rem;
+    position: relative;
 
-  &__name {
-    font-size: $font-medium-2;
-    font-weight: 500;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    &__img {
+      width: 18rem;
+      height: 18rem;
+      filter: brightness(0.7);
+    }
+
+    &__name {
+      font-size: $font-medium-2;
+      font-weight: 500;
+      color: #fff;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
