--- a/sass/components/_slider.scss
+++ b/sass/components/_slider.scss
@@ -1,12 +1,12 @@
 .slider {
   width: 120rem;
   margin: 0 auto;
+
   .slide {
-    width: 120rem;
+    width: 100%;
     padding: 2rem;
     display: flex;
     justify-content: center;
-    align-items: center;
 
     &__description {
       display: flex;
