--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,9 @@
-.header {
+.header__box {
+  width: 120rem;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  position: fixed;
-  top: 0;
 
   &__logo {
     width: 18rem;
@@ -48,15 +47,15 @@
     }
   }
 
-  &-menu {
-    &__btn {
+  &__menu {
+    &--btn {
       width: 7.8rem;
       height: 7rem;
       border: none;
       background: none;
     }
 
-    &__icon {
+    &--icon {
       width: 100%;
       height: 100%;
       fill: $color-blue-light-2;
