--- a/css/style.css
+++ b/css/style.css
@@ -212,28 +212,29 @@ body {
     margin-right: auto; }
   .header__box .user-nav {
     width: 18rem;
-    height: 5rem;
-    position: relative;
-    font-weight: 500;
-    text-align: center; }
-    .header__box .user-nav__menu {
-      list-style: none; }
-    .header__box .user-nav__item {
-      width: 18rem;
-      height: 5rem;
+    text-align: center;
+    position: relative; }
+    .header__box .user-nav__sub {
+      width: 100%;
+      list-style: none;
       position: absolute;
-      visibility: hidden; }
+      top: 130%; }
+      .header__box .user-nav__sub__item {
+        background-color: #e5e5e5;
+        height: 5rem; }
+      .header__box .user-nav__sub__item:not(:last-child) {
+        border-bottom: 5px solid #fff; }
     .header__box .user-nav__link:link, .header__box .user-nav__link:visited {
+      width: 100%;
+      height: 100%;
+      padding: 0.5rem;
       font-size: 2.6rem;
+      font-weight: 500;
       color: #000;
       text-transform: uppercase;
       text-decoration: none;
       letter-spacing: 3px;
-      display: inline-block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
+      display: inline-block; }
   .header__box__menu--btn {
     width: 7.8rem;
     height: 7rem;
