--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -16,34 +16,37 @@
 
   .user-nav {
     width: 18rem;
-    height: 5rem;
-    position: relative;
-    font-weight: 500;
     text-align: center;
+    position: relative;
 
-    &__menu {
+    &__sub {
+      width: 100%;
       list-style: none;
-    }
-
-    &__item {
-      width: 18rem;
-      height: 5rem;
       position: absolute;
-      visibility: hidden;
+      top: 130%;
+
+      &__item {
+        background-color: $color-grey-light-1;
+        height: 5rem;
+      }
+
+      &__item:not(:last-child) {
+        border-bottom: 5px solid #fff;
+      }
     }
 
     &__link:link,
     &__link:visited {
+      width: 100%;
+      height: 100%;
+      padding: 0.5rem;
       font-size: $font-medium-1;
+      font-weight: 500;
       color: #000;
       text-transform: uppercase;
       text-decoration: none;
       letter-spacing: 3px;
       display: inline-block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
     }
   }
 
