--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -29,6 +29,20 @@
       margin-left: 1rem;
     }
   }
+
+  &__menu {
+    width: 7.8rem;
+    height: 7rem;
+    border: none;
+    background: none;
+    cursor: pointer;
+
+    &--icon {
+      width: 100%;
+      height: 100%;
+      fill: $color-blue-light-2;
+    }
+  }
 }
 
 .btn-icon {
