--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -6,11 +6,15 @@ $color-blue-dark-2: #00203b;
 
 $color-black: #000000;
 
+$color-grey-light-0: #f6f6f6;
 $color-grey-light-1: #e5e5e5;
 $color-grey-light-2: #c4c4c4;
 $color-grey-dark-1: #959595;
 
 $color-orange: #ec652b;
+
+$color-kakao: #ffe812;
+$color-google: #db4437;
 
 // FONT
 $font-large-1: 4rem;
