--- a/css/style.css
+++ b/css/style.css
@@ -361,64 +361,68 @@ body {
 
 .login {
   display: grid;
-  grid-template-rows: 20vh repeat(2, min-content);
-  justify-content: center;
-  align-content: center;
-  grid-row-gap: 2.5rem;
-  padding: 0 2rem; }
-  .login__logo {
-    justify-self: center;
-    align-self: center; }
-  .login__input {
+  grid-template-columns: 1fr minmax(min-content, max-content) 1fr; }
+  .login__box {
+    grid-column: 2 / 3;
     display: grid;
-    grid-row-gap: 0.6rem; }
-    .login__input--id, .login__input--pw {
-      width: 58.8rem;
-      outline: none;
-      border: 1px solid #c4c4c4;
-      border-radius: 3px;
-      background-color: #f6f6f6;
+    grid-template-rows: 20vh repeat(2, min-content);
+    justify-content: center;
+    align-content: center;
+    grid-row-gap: 2rem;
+    padding: 0 2rem; }
+    .login__box__logo {
+      justify-self: center;
+      align-self: center; }
+    .login__box__input {
+      display: grid;
+      grid-row-gap: 0.6rem; }
+      .login__box__input--id, .login__box__input--pw {
+        width: 58.8rem;
+        outline: none;
+        border: 1px solid #c4c4c4;
+        border-radius: 3px;
+        background-color: #f6f6f6;
+        font-size: 2.2rem;
+        font-family: inherit;
+        padding: 1.5rem; }
+        .login__box__input--id::placeholder, .login__box__input--pw::placeholder {
+          color: #959595; }
+      .login__box__input--default {
+        text-align: center;
+        margin-top: 2.6rem;
+        margin-bottom: 1.5rem; }
+      .login__box__input .find {
+        font-size: 1.6rem; }
+    .login__box__social::before {
+      content: "";
+      height: 2px;
+      display: block;
+      background-color: #959595; }
+    .login__box__social {
+      display: grid;
+      grid-row-gap: 1.5rem; }
+      .login__box__social--kakao, .login__box__social--google {
+        width: 58.8rem;
+        height: 7rem;
+        text-align: center;
+        position: relative;
+        display: flex;
+        align-items: center; }
+        .login__box__social--kakao span, .login__box__social--google span {
+          position: absolute;
+          left: 2.4rem; }
+      .login__box__social--kakao {
+        background-color: #ffe812 !important;
+        color: #000 !important; }
+      .login__box__social--google {
+        background-color: #db4437 !important; }
+    .login__box .signup {
       font-size: 2.2rem;
-      font-family: inherit;
-      padding: 1.5rem; }
-      .login__input--id::placeholder, .login__input--pw::placeholder {
-        color: #959595; }
-    .login__input--default {
       text-align: center;
-      margin-top: 5.6rem;
-      margin-bottom: 1.5rem; }
-    .login__input .find {
-      font-size: 1.6rem; }
-  .login__social::before {
-    content: "";
-    height: 2px;
-    display: block;
-    background-color: #959595; }
-  .login__social {
-    display: grid;
-    grid-row-gap: 1.5rem; }
-    .login__social--kakao, .login__social--google {
-      width: 58.8rem;
-      height: 7rem;
-      text-align: center;
-      position: relative;
-      display: flex;
-      align-items: center; }
-      .login__social--kakao span, .login__social--google span {
-        position: absolute;
-        left: 2.4rem; }
-    .login__social--kakao {
-      background-color: #ffe812 !important;
-      color: #000 !important; }
-    .login__social--google {
-      background-color: #db4437 !important; }
-  .login .signup {
-    font-size: 2.2rem;
-    text-align: center;
-    align-self: center; }
-    .login .signup span {
-      margin-left: 1.6rem; }
-      .login .signup span a {
-        text-decoration: none;
-        color: #000;
-        font-weight: 700; }
+      align-self: center; }
+      .login__box .signup span {
+        margin-left: 1.6rem; }
+        .login__box .signup span a {
+          text-decoration: none;
+          color: #000;
+          font-weight: 700; }
