--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/category";
 @import "components/banner";
 @import "components/slider";
+@import "components/form";
 
 @import "layout/header";
 @import "layout/hero";
