--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -56,11 +56,30 @@
   background-color: $color-grey-light-1;
   border: none;
   border-radius: 5rem;
-  padding: 0.7rem;
+  padding: 1.3rem;
   cursor: pointer;
 
   &--choice {
     background-color: $color-blue-light-2;
     color: #fff;
+  }
+}
+
+.btn-signup {
+  width: 58.8rem;
+  font-size: $font-medium-2;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+  background-color: $color-blue-dark-1;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 1.5rem 2rem;
+  backface-visibility: hidden;
+  cursor: pointer;
+  transition: all 0.2s;
+
+  &:hover {
+    transform: scale(1.1);
   }
 }
