--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,6 @@
 @import "components/category";
 @import "components/banner";
 @import "components/slider";
-@import "components/form";
 
 @import "layout/header";
 @import "layout/hero";
@@ -22,3 +21,4 @@
 
 @import "pages/home";
 @import "pages/login";
+@import "pages/signup";
