--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -18,6 +18,7 @@
     width: 18rem;
     text-align: center;
     position: relative;
+    z-index: 10;
 
     &__sub {
       width: 100%;
@@ -55,6 +56,7 @@
       width: 18rem;
       position: absolute;
       right: 15%;
+      z-index: 10;
 
       &__item {
         background-color: $color-blue-light-2;
