--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,9 @@ body {
 .heading-3 {
   font-size: 2.6rem; }
 
+.heading-4 {
+  font-style: 2.2rem; }
+
 .search {
   display: flex;
   justify-content: center;
@@ -587,3 +590,8 @@ body {
       height: 12.7rem;
       font-size: 3.6rem;
       padding: 4rem 9rem; }
+
+.main__event .section-hero {
+  background-color: #ec652b; }
+  .main__event .section-hero__box {
+    display: flex; }
